--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Proyecto10</title>
 </head>
-<header>
-    <img class="logo" src="./img/logo.jpg" alt="logo">
-    <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
-    <nav id="menu" class="menuPrincipal">
-        <button id="cerrar" class="cerrarMenu"><i class="bi bi-x-circle"></i></button>
-        <ul class="listaMenu">
-            <li><a href="#">Infornación</a></li>
-            <li><a href="#">Experiecia</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
-</header>
 
 <body>
+    <header>
+        <img class="logo" src="./img/logo.png" alt="logo">
+        <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
+        <nav id="menu" class="menuPrincipal">
+            <button id="cerrar" class="cerrarMenu"><i class="bi bi-x-circle"></i></button>
+            <ul class="listaMenu">
+                <li><a href="#">Infornación</a></li>
+                <li><a href="#">Experiecia</a></li>
+                <li><a href="#">Proyectos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
 
-    <script src="./js/string.js"></script>
+<script src="./js/string.js"></script>
 </body>
 
 </html>
